--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,20 @@
 *{
   box-sizing: border-box;
 }
+body{
+  width:75%;
+  margin-left: 12.5%;
+}
 h1{
 font-size: 32px;
 font-weight: bolder
 }
+
 h3{
   font-size: 24px;
   font-weight: bolder;
-  font-family: 'Norican', cursive;}
+  font-family: 'Norican', cursive;
+}
   h2{
     font-size: 23px;
     font-weight: bolder;
@@ -27,13 +33,21 @@ p{
 
 header img:first-child{
   margin-top: 20px;
-  margin-left: 20px;
+  margin-left: px;
 }
+
+
 #num1{
-  display: inline-block;
+      /* FONT-WEIGHT: 100; */
+      display: inline-block;
+      margin-right: 495px;
+      margin-left: 5px;
+      margin-top: 0px;
+      /* background-color: aqua;
+  /* display: inline-block;
   margin-right:715px ;
   margin-left: 5px;
-  margin-top: 0px;
+  margin-top: 0px; */
   /* background-color: aqua; */
 }
 #num2{
@@ -44,7 +58,7 @@ header img:first-child{
 }
 #num3{
   display: inline-block;
-  margin-right: 20px;
+  /* margin-right: 20px; */
   /* background-color: cadetblue; */
 }
 header img:last-child{
@@ -53,11 +67,15 @@ header img:last-child{
 
 
 main{
-  margin: 20pX;
+  /* margin: 20pX; */
 }
 #md1{
   display: inline-block;
-  margin-right: 999px;
+  /* margin-right: 999px; */
+  margin-top: 20px;
+}
+#md1 h5{
+  margin-right: 760px;
 }
 #mImg1{
   display: inline-block;
@@ -67,7 +85,7 @@ main{
   width: 100%;
 }
 main p{
-  margin: 20px;
+  margin-top: 20px;
 }
 
  .glabel{
@@ -81,12 +99,15 @@ main p{
  }
 
  #mdd{
+   margin-top: 20px;
    display: inline-block;
    background-image: url('../img/list-bg.png');
   background-repeat: no-repeat;
-  margin-left: 150px;
+  /* margin-left: 150px; */
 }
-
+div#mdd {
+  background-size: 1000px;
+}
  #mdd div{
     display: inline;  
      height: 300px; 
@@ -102,7 +123,7 @@ main p{
 
 #right{
 float:right;
-margin-right: 300px;  
+margin-right: 100px;  
 }
 
 footer{
@@ -119,28 +140,38 @@ footer img{
   position: relative;
 
 }
-footer div{
+
+footer div {
+  display: inline-block;
+  margin-right: 50px;
+  /* margin-left: 7px; */
+  margin-top: 0px;
+  /* background-color: aqua; */
+  width: 630px;
+  position: relative;
+}
+/* footer div{
   display: inline-block;
   margin-right: 50px ;
   margin-left: 7px;
   margin-top: 0px;
-  /* background-color: aqua; */
+  /* background-color: aqua; 
   width: 900pX;
   position: relative;
 
-}
+} */ 
 footer button{
   height: 50px;
-  width: 250px;
+  width: 220px;
   display: inline-block;
   font-size: 18px;
   font-weight: bolder;
   color: #ffffff;
   background-color: #b93f06;
   padding: 5px;
-  margin-bottom: 80px;
+  /* margin-bottom: 80px; */
   position: relative;
-  top:-20px;
+  top: -20px;
 }
 .hr{display:block;
   border:none;
@@ -180,4 +211,6 @@ footer button{
       left: 50%;
       margin-left: 10px;
   }
- 
+ footer h2{
+   margin-bottom: 10px;
+ }
